Ensure items with background colour don't bleed outside container

--- a/assets/css/overrides/colours-applied.scss
+++ b/assets/css/overrides/colours-applied.scss
@@ -1,3 +1,7 @@
+.has-background {
+	box-sizing: border-box;
+}
+
 $with-light-text-colour: (
  "black",
  "blue",
